Bug 813936 - Update nsHTMLInputElement::GetStepBase() to return the default value if there is no min. r=smaug